Refactor DTOs and add DetainedLicenses feature
- Replaced `LicenceReadDTO` and `LicenceUpdateDTO` with `LicenseReadDTO` and `LicenseUpdateDTO` for consistent naming.
- Introduced `DetainedLicensesController` with CRUD endpoints.
- Added `DetainedLicenseReadDTO` and `DetainedLicenseUpdateDTO` for data transfer.
- Enhanced `clsDetainedLicense` with `_LoadObjectsData` and `Delete` methods.
- Simplified `clsLicense` by removing `DetainedInfo` and updating related logic.
- Added `DeleteDetainedLicense` method in `clsDetainedLicenseData`.
- Updated Postman collection with new test cases for `DetainedLicenses`.
- Added environment variables for `DetainedLicenses` tests in Postman.
- Introduced `dotnet-tools.json` for managing .NET CLI tools.
- General refactoring for improved readability, modularity, and maintainability.
- Updated Swagger Documentation
