# Driving-License-Management-Backend/DTOs/LicenseUpdateDTO.cs
@@ -1,39 +1,40 @@
 ﻿using Driving_License_Management_Backend.DTOs.Abstraction;
 using Driving_License_Management_BusinessLogicLayer;
-using Microsoft.Identity.Client;
-using System.Text.Json.Serialization;
+using System.ComponentModel.DataAnnotations;
 
 namespace Driving_License_Management_Backend.DTOs
 {
-    public class LicenceReadDTO : IDTO<clsLicense>
+    public class LicenseUpdateDTO: IDTO<clsLicense>
     {
         #region Properties
+        [Key]
         public int Id { get; set; }
+        [Required]
         public int ApplicationId { get; set; }
-        [JsonIgnore]
+        [Required]
         public int DriverId { get; set; }
-        public DriverReadDTO Driver { get; set; }
-        [JsonIgnore]
+        [Required]
         public int LicenseClassId { get; set; }
-        public LicenseClassDTO LicenseClass { get; set; }
-        public DateOnly IssueDate { get; set; }
-        public DateOnly ExpiryDate { get; set; }
+        //public DateOnly IssueDate { get; set; }
+        //public DateOnly ExpiryDate { get; set; }
+        [Required]
         public string Notes { get; set; }
+        [Required]
         public float PaidFees { get; set; }
-        bool IsActive { get; set; }
+        [Required]
+        public bool IsActive { get; set; }
+        [Required]
         public short IssueReason { get; set; }
-        [JsonIgnore]
+        [Required]
         public int CreatedById { get; set; }
-        public UserReadDTO CreatedBy { get; set; }
         #endregion
         #region Constructors
-        public LicenceReadDTO()
-        {
-        }
-        public LicenceReadDTO(clsLicense entity)
+        public LicenseUpdateDTO() { }
+        public LicenseUpdateDTO(clsLicense entity)
         {
             SetValuesFromEntity(entity);
         }
+
         #endregion
         #region Methods
         public void SetValuesFromEntity(clsLicense entity)
@@ -41,18 +42,14 @@ namespace Driving_License_Management_Backend.DTOs
             Id = entity.LicenseID;
             ApplicationId = entity.ApplicationID;
             DriverId = entity.DriverID;
-            Driver = new DriverReadDTO(entity.DriverInfo);
             LicenseClassId = entity.LicenseClass;
-            LicenseClass = new LicenseClassDTO(entity.licenseClassInfo);
-            IssueDate = DateOnly.FromDateTime(entity.IssueDate);
-            ExpiryDate = DateOnly.FromDateTime(entity.ExpirationDate);
+            //IssueDate = DateOnly.FromDateTime(entity.IssueDate);
+            //ExpiryDate = DateOnly.FromDateTime(entity.ExpirationDate);
             Notes = entity.Notes;
             PaidFees = entity.PaidFees;
             IsActive = entity.IsActive;
             IssueReason = (short)entity.IssueReason;
             CreatedById = entity.CreatedByUserID;
-            // CreatedBy property mapping can be added here if needed
-
         }
 
         public void MapValuesToEntity(clsLicense entity)
@@ -60,7 +57,9 @@ namespace Driving_License_Management_Backend.DTOs
             entity.LicenseID = Id;
             entity.ApplicationID = ApplicationId;
             entity.DriverID = DriverId;
+            entity.DriverInfo = clsDriver.FindByDriverID(DriverId);
             entity.LicenseClass = LicenseClassId;
+            entity.licenseClassInfo = clsLicenseClass.Find(LicenseClassId);
             //entity.IssueDate = IssueDate.ToDateTime(new TimeOnly(0, 0));
             //entity.ExpirationDate = ExpiryDate.ToDateTime(new TimeOnly(0, 0));
             entity.Notes = Notes;
@@ -68,6 +67,7 @@ namespace Driving_License_Management_Backend.DTOs
             entity.IsActive = IsActive;
             entity.IssueReason = (clsLicense.enIssueReason)IssueReason;
             entity.CreatedByUserID = CreatedById;
+            entity.CreatedByUserInfo = clsUser.FindByUserID(CreatedById);
         }
         #endregion
     }
